<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">APT-X</string>
    <string name="allow_camera_permission">Please allow Camera permission to scan qr code</string>
    <string name="facebook_app_id">996993097906788</string>
    <string name="fb_login_protocol_scheme">fb4264783076874096</string>
    <string name="please_wait">Loading</string>
    <string name="error">Error</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="internet_connection">Please check internet connection</string>
    <string name="txt_my_profile">Profile</string>
    <string name="txt_home">Home</string>
    <string name="txt_setting">Settings</string>
    <string name="txt_email">Email</string>
    <string name="txt_password_hint">Password</string>
    <string name="txt_forgot_password">Forgot your password?</string>
    <string name="txt_login">Login</string>
    <string name="txt_or">or</string>
    <string name="txt_login_facebook">Login with facebook</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_facebook_with">With</string>
    <string name="txt_sign_up_link">Sign up</string>
    <string name="txt_passwrd_length">* Password must be at least 6 characters long</string>
    <string name="txt_error_msg">There\'s been a mix up, please try again</string>
    <string name="txt_valid_mobile_number">Oh no, that number does\'nt seem to be working - please enter a valid Hong Kong number.</string>
    <string name="server_error">Server Error</string>
    <string name="txt_valdation_empty_mobile_no">Please enter your mobile number.</string>
    <string name="txt_valdation_empty_password">Please enter password.</string>
    <string name="ok">OK</string>
    <string name="enter_employeeid">Please enter Email Id</string>
    <string name="enter_emailid">Please enter Email Id</string>
    <string name="enter_emailid_">Enter Your Email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_valid_employeeid">Please enter valid Email Id</string>
    <string name="submit">Submit</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="confirm_password_match">Confirm password must match password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="scan_upload">Scan &amp; Uploaded Manage\nDocument</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="already_hav">Already a member?</string>
    <string name="welcome">Welcome</string>
    <string name="googlesignin">googleSignIn</string>
    <string name="facebooklogin">facebookLogin</string>
    <string name="applelogin">appleLogin</string>
    <string name="or">Or</string>
    <string name="hint_phone">Email</string>
    <string name="password_hint">Password</string>
    <string name="fingerprintlock">fingerPrintLock</string>
    <string name="full_name">Full name</string>
    <string name="t_and_c">By clicking on the “Continue” button, you agree to our <font color="#2FB1F8"><b>User Agreement</b></font> and our <font color="#2FB1F8"><b>Privacy Policy</b></font>.</string>
    <string name="terms_and_condition_">The User has read and agrees to the Electronic communication agreement (E-sign Act). </string>
    <string name="terms_and_condition_2">By clicking on the “Continue” button, the user agrees to our User Agreement and our Privacy Policy </string>
    <string name="terms_and_condition_3">In order qualify for the Aptcard Prepaid Reloadable Mastercard®, we need to  verify your identity, as required by applicable law. We collect your private information such as, name, address, date of birth and validate your goverment-issued ID. The information will be shared with the issuing bank. you aknowledge, that you have read and agree to the <font color="#2FB1F8"><b>privacy policy.</b></font> </string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="transaction">transaction</string>
    <string name="country">country</string>
    <string name="your_address">Your Address</string>
    <string name="add">Add</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="continue_">Continue</string>
    <string name="sendbtn" translatable="false">Send</string>
    <string name="select_state">Province / State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal / Zip</string>
    <string name="apartment_suite_unit_etc">Address Line 2 (Optional)</string>
    <string name="apartment_suite_unit_etc1">Apartment, Suite ,Unit, etc. (optional)</string>
    <string name="address_line">Address</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="aptpay">APT-X</string>
    <string name="user_image">user_image</string>
    <string name="menu">menu</string>
    <string name="wallet">wallet</string>
    <string name="notification">notification</string>
    <string name="verify">Verify</string>
    <string name="number_subheading">Your Email</string>
    <string name="et_hint_otp">---</string>
    <string name="resend_code">Resend Code</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="new_transaction">New Transaction</string>
    <string name="new_transaction_header">Where would you like to send money?</string>
    <string name="re_enter_account_number">Re-enter Account Number</string>
    <string name="aba_routing" translatable="false">ABA Routing</string>
    <string name="account_number">Account Number</string>
    <string name="account_number_not_matech">Account Number not match</string>
    <string name="cash_pickup">Cash Pickup</string>
    <string name="get_strted">Get Started</string>
    <string name="your_money">Your Money, Your Way</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="phone">Phone</string>
    <string name="back_to_sign_in">Back to <font color="#2FB1F8"> <b>Sign In</b></font></string>
    <string name="toget">to get</string>
    <string name="userAgreement">User Agreement</string>
    <string name="privacyPolicy"> Privacy Policy</string>
    <string name="termsandcondition" translatable="false"> Terms and Conditions</string>
    <string name="please_send">Please enter your email address. We\'ll send you a confirmation code. We use it to ensure the security of our users.</string>
    <string name="enter_ver">Enter the 4 digit verification code that has been sent to  </string>
    <string name="Back">Back</string>
    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>
    <string name="biometric_l">Biometric Login</string>
    <string name="please_enable">Please enable biometric login if you want to use biometric lock in your app</string>
    <string name="please_iden">Please identify your Fingerprint ID to access our services.</string>
    <string name="touch_the_f">Touch the fingerprint sensor</string>
    <string name="enable">Enable</string>
    <string name="close">Close</string>
    <string name="user_finger">Use Fingerprint to Unlock</string>
    <string name="enter_valid_phone">Enter Valid Mobile Number</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">edit</string>
    <string name="emma_wilson">Emma Wilson</string>
    <string name="update">Submit</string>
    <string name="updatetxt">Update</string>
    <string name="change_language">Change Language</string>
    <string name="kyc_details">Verify your details to</string>
    <string name="kyc" translatable="false">KYC</string>
    <string name="to_get_your_aptpay_card">Sign-up</string>
    <string name="identity_card">Identity Card</string>
    <string name="permanent_resident_card">Permanent Resident Card</string>
    <string name="driving_license">Driver’s License</string>
    <string name="passport">Passport</string>
    <string name="citizenship_card">Citizenship Card</string>
    <string name="please_fill_the_details">Please fill the details</string>
    <string name="passport_details">Passport Details</string>
    <string name="passport_number">Passport Number</string>
    <string name="date_of_issue">Date of Issue</string>
    <string name="date_of_expiration_date">Date of Expiration Date</string>
    <string name="province_state_that_issued_the_document">Province/State That issued The Document</string>
    <string name="date_hint">YYYY-MM-DD</string>
    <string name="province_state">Province/State</string>
    <string name="country_that_issued_the_document">Country that issued the document</string>
    <string name="please_choo">Please choose the document for the verification</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="didn_t_receive">Did\'nt receive?</string>
    <string name="txt_not_recieve">Did\'nt receive?</string>
    <string name="txt_resend_in"><font color="#676767"> Resend Code </font></string>
    <string name="txt_send_otp">Resend</string>
    <string name="cancel">Cancel</string>
    <string name="Logout">Log Out</string>
    <string name="are_you_sure_exit">Are you sure you want to exit application? </string>
    <string name="click_yes">Click on Yes to continue</string>
    <string name="enter_valid_password">Password should be 8 character</string>
    <string name="enter_valid_otp">Please enter valid otp</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="tap_to">Tap to change the profile photo</string>
    <string name="your_name">Your Name</string>
    <string name="institution_number">Institution Number</string>
    <string name="transit_number">Transit</string>
    <string name="enter_the_bank_details">Enter the bank details</string>
    <string name="thank_you_">Thank You!</string>
    <string name="thank_you_f">Thank you for registration.</string>
    <string name="add_new_account">Add New Account</string>
    <string name="add_address">Add Address</string>
</resources>