<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.apt_x.app.views.activity.verification.AddressViewModel" />
    </data>

    <RelativeLayout
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/ll_upper"
            layout="@layout/top_header" />

    <LinearLayout
        android:layout_below="@+id/ll_upper"
        android:layout_above="@+id/tvContinue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    style="@style/TextViewSubHeader"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/add_new_account" />

                <TextView
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:onClick="onClick"
                    android:textSize="16sp"
                    android:text="@string/enter_the_bank_details"
                    android:textColor="@color/text_color" />

                <EditText
                    android:id="@+id/et_first_name"
                    style="@style/EditText"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/transit_number"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/et_last_name"
                    style="@style/EditText"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:hint="@string/institution_number"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/st_email"
                    style="@style/EditText"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:hint="@string/account_number"
                    android:inputType="textPostalAddress"
                    tools:ignore="TextFields" />
                <EditText
                    android:id="@+id/et_very_email"
                    style="@style/EditText"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:hint="@string/re_enter_account_number"
                    android:inputType="textPostalAddress"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/etName"
                    style="@style/EditText"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:hint="@string/your_name"
                    android:inputType="textPostalAddress"
                    tools:ignore="TextFields" />



            </LinearLayout>
        </ScrollView>
    </LinearLayout>

        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingVertical="@dimen/_13sdp"
            android:text="@string/continue_"
            android:textColor="@color/white" />

    </RelativeLayout>
</layout>