<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0B0815"
        tools:context="com.apt_x.app.views.activity.profile.EditProfileActivity">

        <RelativeLayout
            android:id="@+id/lhHeader"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="@dimen/_16sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/back"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_back" />

            <TextView
                style="@style/TextViewTitle"

                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/edit_profile" />

            <FrameLayout
                android:layout_width="@dimen/_35sdp"
                android:visibility="gone"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:background="@drawable/btn_bg_lined">

                <ImageView
                    android:id="@+id/ivEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/edit"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_edit" />
            </FrameLayout>
        </RelativeLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lhHeader">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/_22sdp"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp">
                <ImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:id="@+id/ivProfile"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/my_profile"
                    />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:id="@+id/tvTap"
                    android:text="@string/tap_to"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


                <EditText
                    style="@style/EditText"
                    android:id="@+id/etName"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:drawableStart="@drawable/ic_user_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/enter_first_name"
                    android:imeOptions="actionNext"
                    android:enabled="false"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:singleLine="true" />

                <EditText
                    style="@style/EditText"
                    android:id="@+id/etLastName"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:drawableStart="@drawable/ic_user_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/enter_last_name"
                    android:imeOptions="actionNext"
                    android:enabled="false"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:singleLine="true" />

                <EditText
                    style="@style/EditText"
                    android:id="@+id/etMobile"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:drawableStart="@drawable/ic_call_blue"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:enabled="false"
                    android:maxLength="10"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:singleLine="true" />

                <EditText
                    style="@style/EditText"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:drawableStart="@drawable/ic_email_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:id="@+id/etEmail"
                    android:enabled="false"
                    android:textColor="@color/gray_light"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="@dimen/_10sdp" />

                <TextView
                    style="@style/EditText"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="@dimen/_10sdp"
                    tools:hint="@string/your_address"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:id="@+id/etAddress"
                    android:paddingHorizontal="@dimen/_10sdp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/updatetxt"
                    android:id="@+id/tvUpdate"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>